Over til java 17, bumper boot, logstash, token-validation