@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.3.11.RELEASE</version>
+        <version>2.6.2</version>
         <relativePath />
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -19,12 +19,12 @@
     </licenses>
 
     <properties>
-        <java.version>15</java.version>
+        <java.version>17</java.version>
         <sonar.projectKey>navikt_fpinfo-historikk</sonar.projectKey>
         <sonar.organization>navit</sonar.organization>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
         <confluent.version>6.2.0</confluent.version>
-        <token-validation-version>1.3.8</token-validation-version>
+        <token-validation-version>1.3.10</token-validation-version>
         <springfox.version>3.0.0</springfox.version>
         <timestamp>${maven.build.timestamp}</timestamp>
         <maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
@@ -85,7 +85,6 @@
                     <release>${java.version}</release>
                     <encoding>UTF-8</encoding>
                     <parameters>true</parameters>
-                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
@@ -108,7 +107,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
                     <!-- Må ha @{argLine} ellers blir properties satt av jacoco-maven-plugin overkrevet -->
-                    <argLine>@{argLine} --enable-preview</argLine>
+                    <argLine>@{argLine}</argLine>
                 </configuration>
             </plugin>
         </plugins>
@@ -191,7 +190,7 @@
         <dependency>
             <groupId>net.logstash.logback</groupId>
             <artifactId>logstash-logback-encoder</artifactId>
-            <version>6.6</version>
+            <version>7.0.1</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
